--- a/activity/templates/activity/location_selection.html
+++ b/activity/templates/activity/location_selection.html
@@ -1,7 +1,7 @@
 {% load activity_filter %}
 {% load i18n %}
 
-<p>
+<p style="text-align: center;">
     {% for value in user.location.as_dict.values %}
     {% if value %}
         {% if forloop.counter0 is component_index %}
