--- a/activity/templates/activity/detail.html
+++ b/activity/templates/activity/detail.html
@@ -20,14 +20,24 @@
         </div>
     {% endif %}
     <div>
-        <h1 class="center-container" style="margin-bottom: 0;">{{ activity.verbose }}</h1>
+        <h1 class="center-container" style="margin-bottom: 0;">
+            {{ activity.verbose }}
+        </h1>
         {% if activity.description %}
             <p class="center-container">
-                <i>{{ activity.description }}</i>
+                <i>
+                    {{ activity.description }}
+                </i>
             </p>
         {% endif %}
         <p class="center-container">
-            <b><i><span id="info"></span></i></b>
+            <b>
+                <i>
+                    <span id="info">
+                        
+                    </span>
+                </i>
+            </b>
             {% if suggestion %}
                 <br>
                 {% trans 'Passt zu Ihnen zu ' %}{{ suggestion.score }}%
@@ -35,41 +45,44 @@
         </p>
     </div>
     <div class="info-p">
-    {% if activity.categories.all %}
-        <h2>
-            {% trans 'Gehört zu: ' %}
-            {% for category in activity.categories.all %}
-                <a style="margin-left: 5px" href="{{ category.get_absolute_url }}">{{ category }}</a>{% if not forloop.last %}, {% endif %}
-            {% endfor %}
-        </h2>
-    {% endif %}
-    {% if user.is_staff %}
-    <a class="center-container" style="font-weight: bold; margin-bottom: 10px; font-size: 24px" href="{% url 'character:edit_weights' activity.id %}">{% trans 'Gewichtungen bearbeiten' %}</a>
-    {% endif %}
-    {% if is_member %}
-    {% if activity.type == 'competitive' %}
-    <div class="competitive">
-        <div class="left" onclick="location.href='{% url 'competitions:overview' activity.id %}'">
-            <img src="{% static 'icons/tournament.png' %}">
-            {% trans "Offline spielen" %}
-        </div>
-        {% if activity.online and is_member %}
-            <div class="right" onclick="location.href='{% url 'multiplayer:lobby' activity.name %}'">
-                <img src="{% static 'icons/dog.png' %}">
-                {% trans "Online spielen" %}
+        {% if activity.categories.all %}
+            <h2>
+                {% trans 'Gehört zu: ' %}
+                {% for category in activity.categories.all %}
+                    <a style="margin-left: 5px" href="{{ category.get_absolute_url }}">
+                        {{ category }}
+                    </a>{% if not forloop.last %}, {% endif %}
+                {% endfor %}
+            </h2>
+        {% endif %}
+        {% if user.is_staff %}
+            <a class="center-container" style="font-weight: bold; margin-bottom: 10px; font-size: 24px" href="{% url 'character:edit_weights' activity.id %}">
+                {% trans 'Gewichtungen bearbeiten' %}
+            </a>
+        {% endif %}
+        {% if is_member %}
+        {% if activity.type == 'competitive' %}
+        <div class="competitive">
+            <div class="left" onclick="location.href='{% url 'competitions:overview' activity.id %}'">
+                <img src="{% static 'icons/tournament.png' %}">
+                {% trans "Offline spielen" %}
             </div>
+            {% if activity.online and is_member %}
+                <div class="right" onclick="location.href='{% url 'multiplayer:lobby' activity.name %}'">
+                    <img src="{% static 'icons/dog.png' %}">
+                    {% trans "Online spielen" %}
+                </div>
+            {% endif %}
+        </div>
         {% endif %}
-    </div>
-    <span style="clear: both;"></span>
-    {% endif %}
-    <div class="button-like" onclick=openLink("{% url 'chat:chat_room' 'activity' 'activity' activity.id %}")>
-        <img src="{% static 'icons/chat.png' %}">
-        {% if joined_chat %}
-            {{ activity }}-Chat
-        {% else %}
-            {% blocktrans with activity=activity %}{{ activity }}-Chat beitreten{% endblocktrans %}
-        {% endif %}
-    </div>
+        <div class="button-like" onclick=openLink("{% url 'chat:chat_room' 'activity' 'activity' activity.id %}")>
+            <img src="{% static 'icons/chat.png' %}">
+            {% if joined_chat %}
+                {{ activity }}-Chat
+            {% else %}
+                {% blocktrans with activity=activity %}{{ activity }}-Chat beitreten{% endblocktrans %}
+            {% endif %}
+        </div>
     </div>
     <p>
         <div class="center-container"><button class="blue-button" onclick=openLink("{% url 'activity:leave' activity.name %}")>{% trans "Austreten" %}</button></div>
@@ -117,6 +130,7 @@
     <p>
         {% trans "Um Mitglieder anzeigen zu können, müssen Sie beitreten." %}
     </p>
+</div>
     <p><div class="center-container"><button class="blue-button" onclick=openLink("{% url 'activity:join' activity.name %}")>{% trans "Beitreten" %}</button></div></p>
 {% endif %}
 
