--- a/activity/templates/activity/detail.html
+++ b/activity/templates/activity/detail.html
@@ -40,7 +40,7 @@
             </b>
             {% if suggestion %}
                 <br>
-                {% trans 'Passt zu Ihnen zu ' %}{{ suggestion.score }}%
+                {% trans 'Passt zu Ihnen zu: ' %}{{ suggestion.score }}%
             {% endif %}
         </p>
     </div>
