--- a/character/templates/css/quiz.css
+++ b/character/templates/css/quiz.css
@@ -90,6 +90,8 @@ margin-bottom: 20px;
     display: flex;
     flex-direction: column;
     width: 100%;
+    background-color: #3b3b3b;
+    border-radius: 10px;
 }
 
 .button-container {
