--- a/account/templates/account/500.html
+++ b/account/templates/account/500.html
@@ -1,15 +1,17 @@
 {% extends 'base.html' %}
 {% load i18n %}
+{% load static %}
 
-{% block title %}Mist{% endblock %}
+{% block title %}{% trans 'Mist.' %}{% endblock %}
 
 {% block content %}
-<h1>{% trans "Fehler: 500 - Server Fehler" %}</h1>
-<p>{% trans "Da kann entweder jemand nicht programmieren (*HUST*), oder jemand versucht hier absichtlich einen Fehler zu verursachen." %}
-{% if exception %}
-{% trans "Fehlerbeschreibung: " %} {{ exception }}<br>
-{% endif %}
-{% trans "Falls Sie das traurig machen sollte, hier ein paar ausgewählte Witze: " %}</p>
+<h1><img src="{% static 'icons/attention.png' %}">{% trans "Fehler: 500 - Server Fehler" %}</h1>
+<p class="info-p" style="font-weight: bold; color: yellow">
+    {% trans "Dieser Fehler bedeutet fast immer, dass es einen Fehler im Quellcode gibt &#128517;. Sorry. Wenn Sie den Fehler reproduzieren können, melden Sie sich einfach bei <a href='/account/detail/admin'>admin</a> und er wird bestimmt bald behoben!" %}<br>
+    {% if exception %}
+    {% trans "Fehlerbeschreibung: " %} {{ exception }}
+    {% endif %}
+</p>
 
 {% include 'account/jokes.html' %}
 {% endblock %}
