--- a/account/templates/account/people_list.html
+++ b/account/templates/account/people_list.html
@@ -6,9 +6,15 @@
 {% block title %}{% trans 'Personenliste' %}{% endblock %}
 
 {% block content %}
-<h2>{% trans 'Liste von Personen in' %}: {{ request.user.location.full_address }}</h2>
-<div class="center-container"><i>{% trans 'Sortiert nach Charakterübereinstimmung in %' %}</i></div>
-{% include "account/pagination.html" with page=people %}
+<h2>{% trans 'Liste von Personen in' %}:<br>{{ location }}</h2>
+<p class="info-p">
+    {% trans 'Hier werden die ersten 30 Mitglieder in der ausgewählten Gegend angezeigt. Haben Sie den <a href="/character/overview">Persönlichkeitstest</a> gemacht, werden die Mitglieder nach Charakterübereinstimmung in % sortiert. Schicken Sie doch eine Freundschaftsanfrage an die Leute ganz hinten &#128540;' %}
+</p>
+<p style="text-align: center">
+    {% trans "Mitglieder anzeigen" %}: <br/>
+    {% include 'activity/location_selection.html' %}
+</p>
+{% include "account/pagination_component.html" with page=people %}
 <div class="list">
     {% for user, score in people %}
         <div class="item" onclick="location.href='{{ user.get_absolute_url }}'" style="width: 150px; height: 150px">
@@ -21,4 +27,7 @@
             <div style="margin-top: 10px; font-weight: bold">{% trans 'Tote Hose! Hier ist ja echt niemand. Empfehlen Sie die Seite doch Ihren Freunden und schauen Sie, wie gut eure Charaktere übereinstimmen und welche Aktivitäten ihr vielleicht ausprobieren könnt :)' %}</div>
     {% endfor %}
 </div>
+<script>
+    {% include 'javascript/list.js' %}
+</script>
 {% endblock %}
