--- a/account/templates/style/content.css
+++ b/account/templates/style/content.css
@@ -58,7 +58,7 @@ input, textarea, select {
 
 .login {
     box-shadow: 0 0 5px rgba(81, 203, 238, 1);
-    padding: 0px 5px;
+    padding: 5px 5px;
     margin: 5px 5px;
     width: 90vw;
     max-width: 500px;
@@ -90,6 +90,7 @@ h1, h2, h3 {
     align-items: center;
     justify-content: center;
     font-style: italic;
+    text-align: center;
 }
 
 a:link {
@@ -154,6 +155,8 @@ input[type=submit], a.button, .blue-button {
     cursor: pointer;
     border-radius: 4px;
     border: 1px solid transparent;
+    display: block;
+    margin: auto;
 }
 
 input, textarea {
