--- a/character/templates/character/overview.html
+++ b/character/templates/character/overview.html
@@ -44,7 +44,7 @@
 {% if not user.character.presentable %}
 <h2>{% trans 'Noch kein Testergebnis!' %}</h2>
 {% else %}
-<h2>{% trans 'Empfohlene Aktivitäten in ' %}<a href="{{ chosen_category.get_absolute_url }}">{{ chosen_category.verbose }}</a></h2>
+<h2 style="display: block">{% trans 'Empfohlene Aktivitäten in ' %}<a style="display: inline" href="{{ chosen_category.get_absolute_url }}">{{ chosen_category.verbose }}</a></h2>
 <div>{% trans 'Andere Kategorie wählen: ' %}</div>
 <div class="activity-horizontal-list">
     {% for category in categories %}
