--- a/activity/templates/activity/activity_list.html
+++ b/activity/templates/activity/activity_list.html
@@ -5,7 +5,7 @@
 {% block title %}{% trans "Alle Aktivitäten" %}{% endblock %}
 
 {% block content %}
-    <h1><img src="{% static 'icons/activity.png' %}">{% trans "Alle Aktivitäten" %}</h1>
+    <h1 class="h-img"><img src="{% static 'icons/activity.png' %}">{% trans "Alle Aktivitäten" %}</h1>
     <p class="info-p">
         {% trans 'Hier finden Sie eine Liste aller Aktivitäten. Sie können Aktivitäten beitreten und so herausfinden, wer in Ihrer Gegend auch Spaß daran hat. Zudem können Sie auf einer Karte Markierungen machen, die für alle Mitglieder der Aktivität sichtbar sind und herausfinden, in welcher Gegend die Aktivität besonders beliebt ist.' %}
     </p>
