--- a/activity/templates/activity/detail.html
+++ b/activity/templates/activity/detail.html
@@ -49,9 +49,7 @@
             <h2>
                 {% trans 'Gehört zu: ' %}
                 {% for category in activity.categories.all %}
-                    <a style="margin-left: 5px" href="{{ category.get_absolute_url }}">
-                        {{ category }}
-                    </a>{% if not forloop.last %}, {% endif %}
+                    <a style="margin-left: 5px" href="{{ category.get_absolute_url }}">{{ category }}</a>{% if not forloop.last %},{% endif %}
                 {% endfor %}
             </h2>
         {% endif %}
