--- a/usergroups/templates/usergroups/user_group_list.html
+++ b/usergroups/templates/usergroups/user_group_list.html
@@ -5,7 +5,7 @@
 {% block title %}{% trans "Ihre Gruppen" %}{% endblock %}
 
 {% block content %}
-    <h1><img src="{% static 'icons/group.png' %}">{% trans "Ihre Gruppen" %}</h1>
+    <h1 class="h-img"><img src="{% static 'icons/group.png' %}">{% trans "Ihre Gruppen" %}</h1>
     <p class="info-p">
         {% trans 'Gruppen finden und erstellen können Sie <a href="/activity/category_list/">innerhalb einer Kategorie</a>. Mit Gruppen können Sie chatten und über Leerstellen Leute in Ihrer Gegend finden, die sich mit Ihnen austauschen oder mitmachen wollen. Sie können auch Termine verwalten und telefonieren!' %}
     </p>
