--- a/account/templates/account/403.html
+++ b/account/templates/account/403.html
@@ -5,7 +5,7 @@
 {% block title %}{% trans 'Verweigert' %}{% endblock %}
 
 {% block content %}
-<h1><img src="{% static 'icons/attention.png' %}">{% trans "Fehler: 403 - Zugriff verweigert" %}</h1>
+<h1 class="h-img"><img src="{% static 'icons/attention.png' %}">{% trans "Fehler: 403 - Zugriff verweigert" %}</h1>
 <p class="info-p" style="font-weight: bold; color: yellow">
     {% trans "Halt! Kein Zutritt! Sie versuchen einen Link aufzurufen, auf den Sie gar keinen Zugriff haben." %}<br>
     {% if exception %}
