--- a/account/templates/account/edit.html
+++ b/account/templates/account/edit.html
@@ -5,7 +5,7 @@
 {% block title %}{% blocktrans %}Account bearbeiten{% endblocktrans %}{% endblock %}
 
 {% block content %}
-    <h1><img src="{% static 'icons/pen.png' %}">{% blocktrans %}Account bearbeiten{% endblocktrans %}</h1>
+    <h1 class="h-img"><img src="{% static 'icons/pen.png' %}">{% blocktrans %}Account bearbeiten{% endblocktrans %}</h1>
     <p class="info-p">{% blocktrans %}Bearbeiten Sie Ihren Account mit folgendem Formular:{% endblocktrans %}</p>
     <form method="post" enctype="multipart/form-data">
         {{ user_form.as_p }}
