--- a/account/templates/account/home.html
+++ b/account/templates/account/home.html
@@ -7,7 +7,7 @@
 
 {% block content %}
     {% if user.image %}<img src="{{ user.image.url }}" class="user-photo">{% endif %}
-        <h1><img src="{% static 'icons/home.png' %}">Home</h1>
+        <h1 class="h-img"><img src="{% static 'icons/home.png' %}">Home</h1>
         <div class="info-p">
 	<p>{% blocktrans with v0=user.username %}Willkommen, {{ v0 }}.{% endblocktrans %}
         {% if not user.activities.exists %}
@@ -29,7 +29,7 @@
     <div class="button-like" style="margin-bottom: 15px" onclick=openLink("{% url 'account:user_post_list' %}")><img src="{% static 'icons/post.png' %}">{% blocktrans %}Zu Ihren Posts{% endblocktrans %}</div>
     {% trans 'Bei Fragen und Anregungen können Sie einfach eine Freundschaftsanfrage schicken an:' %} <a href="{% url 'account:detail' 'admin' %}">admin</a>
 </div>
-    <h1><img src="{% static 'icons/activity.png' %}">{% trans 'Ihre Aktivitäten:' %}</h1>
+    <h1 class="h-img"><img src="{% static 'icons/activity.png' %}">{% trans 'Ihre Aktivitäten:' %}</h1>
     {% if user.activities.exists %}
         {% include "activity/loop.html" with activities=user.activities %}
     {% else %}
