--- a/account/templates/account/send_friend_request.html
+++ b/account/templates/account/send_friend_request.html
@@ -6,9 +6,9 @@
 
 {% block content %}
     {% if target_user %}
-        <h1><img src="/static/icons/invitation.png">{% trans 'Freundschaftsanfrage an: ' %} {{ target_user.username }}</h1>
+        <h1 class="h-img"><img src="/static/icons/invitation.png">{% trans 'Freundschaftsanfrage an: ' %} {{ target_user.username }}</h1>
     {% else %}
-        <h1><img src="/static/icons/invitation.png">{% trans 'Freundschaftsanfrage an jemanden senden' %}</h1>
+        <h1 class="h-img"><img src="/static/icons/invitation.png">{% trans 'Freundschaftsanfrage an jemanden senden' %}</h1>
     {% endif %}
     <p class="info-p">{% trans "Schreiben Sie" %} {% if target_user %}{{ target_user.username }} {% endif %}{% trans "eine kurze Nachricht" %}.</p>
     <form method="post">
