--- a/activity/templates/activity/category_list.html
+++ b/activity/templates/activity/category_list.html
@@ -5,7 +5,7 @@
 {% block title %}{% trans "Alle Kategorien" %}{% endblock %}
 
 {% block content %}
-    <h1><img src="{% static 'icons/category.png' %}">{% trans "Alle Kategorien" %}</h1>
+    <h1 class="h-img"><img src="{% static 'icons/category.png' %}">{% trans "Alle Kategorien" %}</h1>
     <p class="info-p">{% trans 'Hier finden Sie eine Liste aller verfügbaren Kategorien. In jeder Kategorie lassen sich eigene <a href="/usergroups/group_list">Gruppen erstellen</a>, in denen Sie chatten, telefonieren und Termine verwalten können.' %}</p>
     <div class="list">
         {% for category in categories %}
