--- a/competitions/templates/competitions/overview.html
+++ b/competitions/templates/competitions/overview.html
@@ -6,7 +6,7 @@
 
 
 {% block content %}
-    <h1><img src="{% static 'icons/tournament.png' %}">{% blocktrans with v0=activity.name %}{{ v0 }}: Matches & Turniere{% endblocktrans %}</h1>
+    <h1 class="h-img"><img src="{% static 'icons/tournament.png' %}">{% blocktrans with v0=activity.name %}{{ v0 }}: Matches & Turniere{% endblocktrans %}</h1>
     <p>{% include 'activity/location_selection.html' %}</p>
     <h2>{% blocktrans %}Turniere{% endblocktrans %}</h2>
     <div class="button-like" onclick=openLink("{% url 'competitions:create_tournament' activity.id %}")>
