--- a/competitions/templates/competitions/user_overview.html
+++ b/competitions/templates/competitions/user_overview.html
@@ -5,7 +5,7 @@
 {% block title %}{% blocktrans %}Matches & Turniere{% endblocktrans %}{% endblock %}
 
 {% block content %}
-    <h1><img src="{% static 'icons/dog.png' %}">{% trans 'Online' %}</h2>
+    <h1 class="h-img"><img src="{% static 'icons/dog.png' %}">{% trans 'Online' %}</h2>
     <p class="info-p">
         {% trans 'Hier finden Sie die Lobbys der Spiele, die Sie gleich hier online spielen können. Durch das Betreten der Lobby treten Sie der entsprechenden Aktivität bei, falls Sie das noch nicht gemacht haben.' %}
     </p>
@@ -29,17 +29,17 @@
             {% blocktrans %}Poker-Lobby{% endblocktrans %}
         </div>
     </div>
-    <h1><img src="{% static 'icons/tournament.png' %}">{% trans 'Offline' %}</h1>
+    <h1 class="h-img"><img src="{% static 'icons/tournament.png' %}">{% trans 'Offline' %}</h1>
     <p class="info-p">
         {% blocktrans %}Erstellen und nehmen Sie Teil an Turnieren und Matches über den 'Offline spielen'-Button auf der entsprechenden <a href="/activity/list/">Aktivitätsseite</a>! Geht natürlich nur bei Aktivitäten, wo man einen Wettbewerb haben kann.{% endblocktrans %}
     </p>
-    <h2><img src="{% static 'icons/match.png' %}">{% blocktrans %}Matches{% endblocktrans %}</h2>
+    <h2 class="h-img"><img src="{% static 'icons/match.png' %}">{% blocktrans %}Matches{% endblocktrans %}</h2>
     <ul>
         {% for match in user.matches.all %}
             <li><a href="{{ match.activity.get_absolute_url }}">{{ match.activity }}</a>: <a href="{{ match.get_absolute_url }}">{{ match }}</a></li>
         {% endfor %}
     </ul>
-    <h2><img src="{% static 'icons/leaderboard.png' %}">{% blocktrans %}Turniere{% endblocktrans %}</h2>
+    <h2 class="h-img"><img src="{% static 'icons/leaderboard.png' %}">{% blocktrans %}Turniere{% endblocktrans %}</h2>
     <h3>{% blocktrans %}Als Admin:{% endblocktrans %}</h3>
     <ul>
         {% for tournament in user.owned_tournaments.all %}
