--- a/activity/templates/activity/detail.html
+++ b/activity/templates/activity/detail.html
@@ -126,7 +126,7 @@
     <p style="clear: both"></p>
 {% else %}
     <p>
-        {% trans "Um Mitglieder anzeigen zu können, müssen Sie beitreten." %}
+        {% trans "Um Mitglieder anzeigen und Orte markieren zu können, müssen Sie beitreten." %}
     </p>
 </div>
     <p><div class="center-container"><button class="blue-button" onclick=openLink("{% url 'activity:join' activity.name %}")>{% trans "Beitreten" %}</button></div></p>
